# SET(LUNA_IMP_FILE ${CMAKE_CURRENT_SOURCE_DIR}/sgtLuna/src/luna.cpp)
# SET(LUNA_INC_DIR ${CMAKE_CURRENT_SOURCE_DIR}/sgtLuna/include)

INCLUDE_DIRECTORIES(${OSG_INC_DIR})
LINK_DIRECTORIES (${OSG_LIB_DIR})

INCLUDE_DIRECTORIES(${LUA_INC_DIR})
LINK_DIRECTORIES (${LUA_LIB_DIR})

ADD_SUBDIRECTORY(sgtCore)

# ADD_SUBDIRECTORY(plug_lpeg)
# ADD_SUBDIRECTORY(plug_lfs)
# ADD_SUBDIRECTORY(plug_sql)
# ADD_SUBDIRECTORY(plug_gl)
# ADD_SUBDIRECTORY(plug_iup)
# ADD_SUBDIRECTORY(plug_SDL)

ADD_SUBDIRECTORY(plug_core)
# ADD_SUBDIRECTORY(plug_doxmlparser)
# ADD_SUBDIRECTORY(plug_wx)

# ADD_SUBDIRECTORY(plug_osg)
# ADD_SUBDIRECTORY(plug_osgUtil)
# ADD_SUBDIRECTORY(plug_osgDB)
# ADD_SUBDIRECTORY(plug_osgGA)
# ADD_SUBDIRECTORY(plug_osgText)
# ADD_SUBDIRECTORY(plug_osgViewer)
# ADD_SUBDIRECTORY(plug_osgParticle)
# ADD_SUBDIRECTORY(plug_osgWX)

#Sim

ADD_SUBDIRECTORY(sgt_launcher)
# ADD_SUBDIRECTORY(tests/virtual_base)

# ADD_SUBDIRECTORY(wx)
# ADD_SUBDIRECTORY(doxmlparser)
# ADD_SUBDIRECTORY(btests)


# Tests:
# ADD_SUBDIRECTORY(plug_doxmlparser2)
