# SET(LUNA_IMP_FILE ${CMAKE_CURRENT_SOURCE_DIR}/sgtLuna/src/luna.cpp)
# SET(LUNA_INC_DIR ${CMAKE_CURRENT_SOURCE_DIR}/sgtLuna/include)

INCLUDE_DIRECTORIES(${BOOST_INC_DIR})
LINK_DIRECTORIES (${BOOST_LIB_DIR})

INCLUDE_DIRECTORIES(${OSG_INC_DIR})
LINK_DIRECTORIES (${OSG_LIB_DIR})

INCLUDE_DIRECTORIES(${LUA_INC_DIR})
LINK_DIRECTORIES (${LUA_LIB_DIR})

IF(MSVC)
	# force generation of pdb files:
	SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} /Zi")
ENDIF()


# OSG plugins:
# ADD_SUBDIRECTORY(osgdb_assimp)
# ADD_SUBDIRECTORY(osgdb_freeimage)

ADD_SUBDIRECTORY(sgtCore)

# ADD_SUBDIRECTORY(lua_core)
# ADD_SUBDIRECTORY(lua_externals)
# ADD_SUBDIRECTORY(lua_cog)

# ADD_SUBDIRECTORY(plug_byteconverter)
# ADD_SUBDIRECTORY(plug_lpeg)
# ADD_SUBDIRECTORY(plug_lfs)
# ADD_SUBDIRECTORY(plug_sql)
# ADD_SUBDIRECTORY(plug_gl)
IF(MSVC)
	# ADD_SUBDIRECTORY(plug_iup)
	# ADD_SUBDIRECTORY(plug_SDL)
ENDIF()
# ADD_SUBDIRECTORY(plug_xml)
# ADD_SUBDIRECTORY(plug_lanes)
# ADD_SUBDIRECTORY(plug_ssl)

# ADD_SUBDIRECTORY(plug_core)
# ADD_SUBDIRECTORY(plug_doxmlparser)
# ADD_SUBDIRECTORY(plug_osg)
IF(MSVC)
	# ADD_SUBDIRECTORY(plug_wx)
ENDIF()
# ADD_SUBDIRECTORY(plug_osgWX)
# ADD_SUBDIRECTORY(plug_FANN)
# ADD_SUBDIRECTORY(plug_awesomium)
# ADD_SUBDIRECTORY(plug_spark)
# ADD_SUBDIRECTORY(plug_tuio)
ADD_SUBDIRECTORY(plug_vlc)
# ADD_SUBDIRECTORY(plug_atb)
# ADD_SUBDIRECTORY(plug_kinect)
# ADD_SUBDIRECTORY(plug_box2d)
# ADD_SUBDIRECTORY(plug_gizmo)
# ADD_SUBDIRECTORY(plug_bullet)
# ADD_SUBDIRECTORY(plug_micropather)
# ADD_SUBDIRECTORY(plug_mathgl)
# ADD_SUBDIRECTORY(plug_proland)
# ADD_SUBDIRECTORY(plug_opengl)

# ToDo:
# ADD_SUBDIRECTORY(plug_freenect)
# ADD_SUBDIRECTORY(plug_spice)
# ADD_SUBDIRECTORY(plug_norad)

# ADD_SUBDIRECTORY(sgt_launcher)
# ADD_SUBDIRECTORY(tests/virtual_base)

# ADD_SUBDIRECTORY(wx)
# ADD_SUBDIRECTORY(doxmlparser)
# ADD_SUBDIRECTORY(btests)


# Tests:
# ADD_SUBDIRECTORY(plug_doxmlparser2)
