SET(TARGET_NAME "externals")
SET(TARGET_DIR "bin/${FLAVOR}/packages")

INCLUDE_DIRECTORIES (../include)
INCLUDE_DIRECTORIES (../../sgtLuna/include)

ADD_DEFINITIONS(-D_CRT_SECURE_NO_WARNINGS)

FILE(GLOB_RECURSE SOURCE_FILES "bindings.cpp" )

ADD_LIBRARY (${TARGET_NAME}_pack SHARED ${SOURCE_FILES})

TARGET_LINK_LIBRARIES(${TARGET_NAME}_pack sgtLuna)

INSTALL(TARGETS ${TARGET_NAME}_pack
	RUNTIME DESTINATION ${TARGET_DIR}
	LIBRARY DESTINATION ${TARGET_DIR})

SET_TARGET_PROPERTIES(${TARGET_NAME}_pack PROPERTIES 
	OUTPUT_NAME "${TARGET_NAME}"
	PREFIX ""
	IMPORT_PREFIX "plug_"
	SUFFIX ".lpak")

INSTALL_PDB(${TARGET_NAME}_pack "packages/")
	
GENERATE_LUA_PACKAGE(${TARGET_NAME}_pack)	
COMPRESS_BINARY_TARGET(${TARGET_NAME}_pack)
