SET(TARGET_NAME "osgdb_assimp")
SET(TARGET_DIR "bin/${FLAVOR}/osgPlugins-3.1.5")

INCLUDE_DIRECTORIES (../include)
# INCLUDE_DIRECTORIES (../../sgtCore/include)

INCLUDE_DIRECTORIES(${ASSIMP_INC_DIR})
LINK_DIRECTORIES (${ASSIMP_LIB_DIR})

# ADD_DEFINITIONS(-DPLUG_LIBRARY)
# ADD_DEFINITIONS(-DLUNA_BINDINGS)
ADD_DEFINITIONS(-D_CRT_SECURE_NO_WARNINGS)
ADD_DEFINITIONS(${OSG_FLAGS})

FILE(GLOB_RECURSE PUBLIC_HEADERS "../include/*.h")

FILE(GLOB_RECURSE SOURCE_FILES "*.cpp" )

# ADD_MSVC_PRECOMPILED_HEADER("plug_common.h" "plug_common.cpp" SOURCE_FILES)

ADD_LIBRARY (${TARGET_NAME} SHARED ${PUBLIC_HEADERS} ${SOURCE_FILES})

TARGET_LINK_LIBRARIES(${TARGET_NAME} ${LUA_LIBS} ${OSG_LIBS} ${GL_LIBS} ${ASSIMP_LIBS} ${FLAVOR_LIBS}) #sgtCore

INSTALL(TARGETS ${TARGET_NAME}
	RUNTIME DESTINATION ${TARGET_DIR}
	LIBRARY DESTINATION ${TARGET_DIR})

COMPRESS_BINARY()
INSTALL_PDB()
