SET(TARGET_NAME "FANN")
SET(TARGET_DIR "bin/${FLAVOR}/modules")

INCLUDE_DIRECTORIES (../include)
INCLUDE_DIRECTORIES (../../sgtCore/include)

ADD_DEFINITIONS(-DPLUG_LIBRARY)
ADD_DEFINITIONS(-DLUNA_BINDINGS)
ADD_DEFINITIONS(-D_CRT_SECURE_NO_WARNINGS)
ADD_DEFINITIONS(-DFANN_NO_DLL)
ADD_DEFINITIONS(${OSG_FLAGS})

# SET(CMAKE_SHARED_LINKER_FLAGS "${CMAKE_SHARED_LINKER_FLAGS} /NODEFAULTLIB:LIBCMT.lib")


FILE(GLOB_RECURSE PUBLIC_HEADERS "../include/*.h")

FILE(GLOB_RECURSE FANN_FILES "floatfann.c" )
FILE(GLOB_RECURSE SOURCE_FILES "*.cpp" )

ADD_MSVC_PRECOMPILED_HEADER("plug_common.h" "plug_common.cpp" SOURCE_FILES)

ADD_LIBRARY (${TARGET_NAME} SHARED ${PUBLIC_HEADERS} ${SOURCE_FILES} ${FANN_FILES})

TARGET_LINK_LIBRARIES(${TARGET_NAME} sgtCore ${LUA_LIBS}) # ${OSG_LIBS} OpenGL32.lib GLU32.lib)  

INSTALL(TARGETS ${TARGET_NAME}
	RUNTIME DESTINATION ${TARGET_DIR}
	LIBRARY DESTINATION ${TARGET_DIR})

# step needed for the generation of the XML documentation:
SET(INCLUDE_PATH ${SPICE_INC_DIR})

SET(INTF_FILES)
ADD_FILES(INTF_FILES "../include/fann_cpp.h")
ADD_FILES(INTF_FILES "../include/plug_extensions.h")
ADD_FILES(INTF_FILES "../interface/helpers.h")

SET_TARGET_PROPERTIES(${TARGET_NAME} PROPERTIES 
	PREFIX ""
	SUFFIX ".sgp")

SET(DOXY_PREDEFINED )
SET(FILE_PATTERNS )
GENERATE_REFLECTION(${TARGET_NAME} INTF_FILES)
COMPRESS_BINARY()
INSTALL_PDB_EX(${TARGET_NAME} plug_${TARGET_NAME})
