SET(TARGET_NAME "awDX")
SET(TARGET_DIR "bin/${FLAVOR}/modules")

INCLUDE_DIRECTORIES (../include)
INCLUDE_DIRECTORIES (../../sgtCore/include)

INCLUDE_DIRECTORIES(${DX_INC_DIR})
LINK_DIRECTORIES (${DX_LIB_DIR})

INCLUDE_DIRECTORIES(${AWESOMIUM_INC_DIR})
LINK_DIRECTORIES (${AWESOMIUM_LIB_DIR})

ADD_DEFINITIONS(-DPLUG_LIBRARY)
ADD_DEFINITIONS(-DLUNA_BINDINGS)
ADD_DEFINITIONS(-D_CRT_SECURE_NO_WARNINGS)
ADD_DEFINITIONS(${OSG_FLAGS})

FILE(GLOB_RECURSE PUBLIC_HEADERS "../include/*.h")

FILE(GLOB_RECURSE SOURCE_FILES "*.cpp" )

ADD_MSVC_PRECOMPILED_HEADER("plug_common.h" "plug_common.cpp" SOURCE_FILES)

ADD_LIBRARY (${TARGET_NAME} SHARED ${PUBLIC_HEADERS} ${SOURCE_FILES} )

TARGET_LINK_LIBRARIES(${TARGET_NAME} sgtCore  ${DX_LIBS} ${AWESOMIUM_LIBS} ${LUA_LIBS} ${OSG_LIBS} ${GL_LIBS})

INSTALL(TARGETS ${TARGET_NAME}
	RUNTIME DESTINATION ${TARGET_DIR}
	LIBRARY DESTINATION ${TARGET_DIR})

# reflection settings:	
SET(INTF_FILES)

#LIST(APPEND INTF_FILES "${MYDEP_INC_DIR}")
ADD_FILES(INTF_FILES "../include/plug_extensions.h")
ADD_FILES(INTF_FILES "../include/DXSurface.h")
ADD_FILES(INTF_FILES "../interface/helpers.h")

SET_TARGET_PROPERTIES(${TARGET_NAME} PROPERTIES 
	PREFIX ""
	IMPORT_PREFIX "plug_"
	SUFFIX ".sgp")

SET(DOXY_PREDEFINED ) 
SET(FILE_PATTERNS )
SET(INCLUDE_PATH )

GENERATE_REFLECTION(${TARGET_NAME} INTF_FILES)

# misc operations:
COMPRESS_BINARY()
INSTALL_PDB(${TARGET_NAME} "modules/")
