SET(TARGET_NAME "bullet")
SET(TARGET_DIR "bin/${FLAVOR}/modules")

INCLUDE_DIRECTORIES (../include)
INCLUDE_DIRECTORIES (../../sgtCore/include)

INCLUDE_DIRECTORIES(${BULLET_INC_DIR})
# INCLUDE_DIRECTORIES(${BULLET_INC_DIR}/BulletWorldImporter)
LINK_DIRECTORIES (${BULLET_LIB_DIR})

ADD_DEFINITIONS(-DPLUG_LIBRARY)
ADD_DEFINITIONS(-DLUNA_BINDINGS)
ADD_DEFINITIONS(-D_CRT_SECURE_NO_WARNINGS)
ADD_DEFINITIONS(${OSG_FLAGS})

FILE(GLOB_RECURSE PUBLIC_HEADERS "../include/*.h")

FILE(GLOB_RECURSE SOURCE_FILES "*.cpp" )

ADD_MSVC_PRECOMPILED_HEADER("plug_common.h" "plug_common.cpp" SOURCE_FILES)

ADD_LIBRARY (${TARGET_NAME} SHARED ${PUBLIC_HEADERS} ${SOURCE_FILES})

TARGET_LINK_LIBRARIES(${TARGET_NAME} sgtCore ${LUA_LIBS} ${OSG_LIBS} ${GL_LIBS} ${BULLET_LIBS} ${FLAVOR_LIBS})

INSTALL(TARGETS ${TARGET_NAME}
	RUNTIME DESTINATION ${TARGET_DIR}
	LIBRARY DESTINATION ${TARGET_DIR})
	
# step needed for the generation of the XML documentation:
SET(INTF_FILES)
# LIST(APPEND INTF_FILES "${BULLET_INC_DIR}")
# LIST(APPEND INTF_FILES "W:/Cloud/Projects/singularity/sources/plug_bullet/interface/bullet")
LIST(APPEND INTF_FILES "${CMAKE_CURRENT_SOURCE_DIR}/../interface/bullet")
ADD_FILES(INTF_FILES "../include/plug_extensions.h")
ADD_FILES(INTF_FILES "../interface/helpers.h")
ADD_FILES(INTF_FILES "../include/SampleRigidUpdater.h")

SET_TARGET_PROPERTIES(${TARGET_NAME} PROPERTIES 
	PREFIX ""
	IMPORT_PREFIX "plug_"
	SUFFIX ".sgp")
	
SET(DOXY_PREDEFINED )
SET(FILE_PATTERNS )

SET(DOXY_PREDEFINED SIMD_FORCE_INLINE=) #__BT_SKIP_UINT64_H 
# SET(FILE_PATTERNS */LinearMath/* */BulletDynamics/* */BulletCollision/*/bt*.h)
SET(FILE_PATTERNS *)
SET(INCLUDE_PATH ${BULLET_INC_DIR} ${OSG_INC_DIR})

GENERATE_REFLECTION(${TARGET_NAME} INTF_FILES)
COMPRESS_BINARY()
