SET(TARGET_NAME "byteconverter")
SET(TARGET_DIR "bin/${FLAVOR}/modules")

INCLUDE_DIRECTORIES(../include)
INCLUDE_DIRECTORIES (../../sgtCore/include)

INCLUDE_DIRECTORIES(${LUA_INC_DIR})
LINK_DIRECTORIES (${LUA_LIB_DIR})

ADD_DEFINITIONS(-DPLUG_LIBRARY)

ADD_LIBRARY (${TARGET_NAME} SHARED byteconverter.cpp)

TARGET_LINK_LIBRARIES(${TARGET_NAME} sgtCore ${LUA_LIBS})  

SET_TARGET_PROPERTIES(${TARGET_NAME} PROPERTIES 
	PREFIX ""
	SUFFIX ".sgp")
    
INSTALL(TARGETS ${TARGET_NAME}
	RUNTIME DESTINATION ${TARGET_DIR}
	LIBRARY DESTINATION ${TARGET_DIR})

COMPRESS_BINARY()
