SET(TARGET_NAME "kinect")
SET(TARGET_DIR "bin/${FLAVOR}/modules")

INCLUDE_DIRECTORIES (../include)
INCLUDE_DIRECTORIES (../../sgtCore/include)

INCLUDE_DIRECTORIES(${KINECT_INC_DIR})
LINK_DIRECTORIES (${KINECT_LIB_DIR})

ADD_DEFINITIONS(-DPLUG_LIBRARY)
ADD_DEFINITIONS(-DLUNA_BINDINGS)
ADD_DEFINITIONS(-D_CRT_SECURE_NO_WARNINGS)
ADD_DEFINITIONS(${OSG_FLAGS})

FILE(GLOB_RECURSE PUBLIC_HEADERS "../include/*.h")

FILE(GLOB_RECURSE SOURCE_FILES "*.cpp" )


ADD_MSVC_PRECOMPILED_HEADER("plug_common.h" "plug_common.cpp" SOURCE_FILES)

ADD_LIBRARY (${TARGET_NAME} SHARED ${PUBLIC_HEADERS} ${SOURCE_FILES})

TARGET_LINK_LIBRARIES(${TARGET_NAME} sgtCore ${LUA_LIBS} ${OSG_LIBS} ${GL_LIBS} ${KINECT_LIBS} ${FLAVOR_LIBS})

INSTALL(TARGETS ${TARGET_NAME}
	RUNTIME DESTINATION ${TARGET_DIR}
	LIBRARY DESTINATION ${TARGET_DIR})

# step needed for the generation of the XML documentation:
SET(INCLUDE_PATH ${SPICE_INC_DIR})

SET(INTF_FILES)
# LIST(APPEND INTF_FILES "${KINECT_INC_DIR}")
ADD_FILES(INTF_FILES "../include/plug_extensions.h")
ADD_FILES(INTF_FILES "../interface/helpers.h")
ADD_FILES(INTF_FILES "../include/KinectHandler.h")
ADD_FILES(INTF_FILES "../include/KinectDataDrawer.h")

SET_TARGET_PROPERTIES(${TARGET_NAME} PROPERTIES 
	PREFIX ""
	IMPORT_PREFIX "plug_"
	SUFFIX ".sgp")

SET_TARGET_PROPERTIES(${TARGET_NAME} PROPERTIES LINK_FLAGS "/OPT:NOREF")
	
SET(DOXY_PREDEFINED )
SET(FILE_PATTERNS )

SET(DOXY_PREDEFINED WINAPI= ) 
# SET(FILE_PATTERNS *)
# SET(INCLUDE_PATH ${SPARK_INC_DIR} ${OSG_INC_DIR})

GENERATE_REFLECTION(${TARGET_NAME} INTF_FILES)
COMPRESS_BINARY()
INSTALL_PDB_EX(${TARGET_NAME} plug_${TARGET_NAME})
