SET(TARGET_NAME "land")
SET(TARGET_DIR "bin/${FLAVOR}/modules")

INCLUDE_DIRECTORIES (../include)
INCLUDE_DIRECTORIES (../../sgtCore/include)
INCLUDE_DIRECTORIES (../../sgtLand/include)

#INCLUDE_DIRECTORIES(${MYDEP_INC_DIR})
#LINK_DIRECTORIES (${MYDEP_LIB_DIR})


ADD_DEFINITIONS(-DPLUG_LIBRARY)
ADD_DEFINITIONS(-DLUNA_BINDINGS)
ADD_DEFINITIONS(-D_CRT_SECURE_NO_WARNINGS)
ADD_DEFINITIONS(${OSG_FLAGS})

FILE(GLOB_RECURSE PUBLIC_HEADERS "../include/*.h")

FILE(GLOB_RECURSE SOURCE_FILES "*.cpp" )

ADD_MSVC_PRECOMPILED_HEADER("plug_common.h" "plug_common.cpp" SOURCE_FILES)

ADD_LIBRARY (${TARGET_NAME} SHARED ${PUBLIC_HEADERS} ${SOURCE_FILES} )

TARGET_LINK_LIBRARIES(${TARGET_NAME} sgtCore sgtLand ${LUA_LIBS} ${OSG_LIBS} ${GL_LIBS})

INSTALL(TARGETS ${TARGET_NAME}
	RUNTIME DESTINATION ${TARGET_DIR}
	LIBRARY DESTINATION ${TARGET_DIR})

# reflection settings:	
SET(INTF_FILES)

# LIST(APPEND INTF_FILES "${CMAKE_CURRENT_SOURCE_DIR}/../../sgtLand/include")
ADD_FILES(INTF_FILES "../../sgtLand/include/math/*.h")
ADD_FILES(INTF_FILES "../include/plug_extensions.h")
ADD_FILES(INTF_FILES "../interface/helpers.h")

SET_TARGET_PROPERTIES(${TARGET_NAME} PROPERTIES 
	PREFIX ""
	IMPORT_PREFIX "plug_"
	SUFFIX ".sgp")

SET(DOXY_PREDEFINED ) 
SET(FILE_PATTERNS )
# SET(EXPAND_AS_DEFINED VEC2_CLASS)
SET(INCLUDE_PATH ${CMAKE_CURRENT_SOURCE_DIR}/../../sgtLand/include ${CMAKE_CURRENT_SOURCE_DIR}/../interface)

GENERATE_REFLECTION(${TARGET_NAME} INTF_FILES)

# misc operations:
COMPRESS_BINARY()
INSTALL_PDB(${TARGET_NAME} "modules/")
