SET(TARGET_NAME "core")
SET(TARGET_DIR "bin/${FLAVOR}/modules/lanes")

INCLUDE_DIRECTORIES(../include)

INCLUDE_DIRECTORIES(${LUA_INC_DIR})
LINK_DIRECTORIES (${LUA_LIB_DIR})

ADD_LIBRARY (${TARGET_NAME} SHARED lanes.c threading.c tools.c keeper.c)

TARGET_LINK_LIBRARIES(${TARGET_NAME} ${LUA_LIBS})  

SET_TARGET_PROPERTIES(${TARGET_NAME} PROPERTIES 
	PREFIX ""
	SUFFIX ".sgp")
    
INSTALL(TARGETS ${TARGET_NAME}
	RUNTIME DESTINATION ${TARGET_DIR}
	LIBRARY DESTINATION ${TARGET_DIR})

COMPRESS_BINARY()
