SET(TARGET_NAME "opengl")
SET(TARGET_DIR "bin/${FLAVOR}/modules")

INCLUDE_DIRECTORIES (../include)
INCLUDE_DIRECTORIES (../../sgtLuna/include)

INCLUDE_DIRECTORIES(${GLEW_INC_DIR})
LINK_DIRECTORIES (${GLEW_LIB_DIR})

ADD_DEFINITIONS(-DPLUG_LIBRARY)
ADD_DEFINITIONS(-DLUNA_BINDINGS)
ADD_DEFINITIONS(-D_CRT_SECURE_NO_WARNINGS)
# ADD_DEFINITIONS(${OSG_FLAGS})
ADD_DEFINITIONS(${GLEW_FLAGS})

FILE(GLOB_RECURSE PUBLIC_HEADERS "../include/*.h")

FILE(GLOB_RECURSE SOURCE_FILES "*.cpp" )

ADD_MSVC_PRECOMPILED_HEADER("plug_common.h" "plug_common.cpp" SOURCE_FILES)

ADD_LIBRARY (${TARGET_NAME} SHARED ${PUBLIC_HEADERS} ${SOURCE_FILES} )

TARGET_LINK_LIBRARIES(${TARGET_NAME} sgtLuna ${LUA_LIBS} ${GLEW_LIBS} ${GL_LIBS})


INSTALL(TARGETS ${TARGET_NAME}
	RUNTIME DESTINATION ${TARGET_DIR}
	LIBRARY DESTINATION ${TARGET_DIR})

# step needed for the generation of the XML documentation:
SET(INCLUDE_PATH ${SPICE_INC_DIR})

SET(INTF_FILES)
# LIST(APPEND INTF_FILES "${AWESOMIUM_INC_DIR}")
ADD_FILES(INTF_FILES "../interface/helpers.h")
ADD_FILES(INTF_FILES "../include/glcorearb_4.3.h")

SET_TARGET_PROPERTIES(${TARGET_NAME} PROPERTIES 
	PREFIX ""
	IMPORT_PREFIX "plug_"
	SUFFIX ".sgp")

SET(DOXY_PREDEFINED GLCOREARB_PROTOTYPES GLAPI= APIENTRY= GL_ARB_sync)
SET(FILE_PATTERNS *)
SET(INCLUDE_PATH )

GENERATE_REFLECTION(${TARGET_NAME} INTF_FILES)
COMPRESS_BINARY()
INSTALL_PDB(${TARGET_NAME} "modules/")
